--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ tgcrypto
 asyncio
 ffmpeg-python
 py-tgcalls==0.8.1
-pyrogram==git+https://github.com/opbrutal/pyrogram@master
+git+https://github.com/opbrutal/pyrogram@master
 youtube-search-python==1.4.9
 yt-dlp==2021.12.01
 youtube-search
